# fullfathom5

./: .env.example  .gitignore  .vscodeignore  0001-Add-ChoralRepl-base-class-with-placeholder-render_pr.patch  LICENSE  README.md  TODO.md  cli.patch  cli.u.patch  cli_fixed.patch  package.json  pyproject.toml  repl_shell_and_staging.patch  test.patch  top_comment.patch  tsconfig.json
.bones/: history
.bones/backups/: TODO.md.bak.20250819-210546
archive/2025-08-17-old-cli/: NOTES.md  ai.py  cli.py
src/: extension.json
src/fullfathom5/: __init__.py  ai.py  cli.py
src/fullfathom5/bones/: _apply_patches.py  bones_cli.py  bones_engine.py  choral_base.py  commands.py  graph_manager.py  repl_base.py  state_machine.py
tests/: test_cli.py
